--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,18 @@
 
 export("%>%")
 export(color_dsatur)
-export(color_hybrid_dsatur)
-export(color_hybrid_tabucol)
+export(color_hybrid_dsatur_tabucol)
+export(color_hybrid_lmxrlf_tabucol)
 export(color_lmxrlf)
 export(color_msc)
+export(color_tabucol)
+export(graph_coloring_dsatur)
+export(graph_coloring_hybrid_dsatur_tabucol)
+export(graph_coloring_hybrid_lmxrlf_tabucol)
+export(graph_coloring_lmxrlf)
+export(graph_coloring_msc)
+export(graph_coloring_tabucol)
 importFrom(Rcpp,sourceCpp)
+importFrom(Rdpack,reprompt)
 importFrom(magrittr,"%>%")
 useDynLib(graphcoloring, .registration = TRUE)
