--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,11 @@ sudo: false
 cache: packages
 after_success:
   - Rscript -e 'covr::codecov()'
+
+# Handle git submodules yourself
+git:
+    submodules: false
+# Use sed to replace the SSH URL with the public URL, then initialize submodules
+before_install:
+    - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
+    - git submodule update --init --recursive
