--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,23 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
 language: R
-sudo: false
-cache: packages
+cache:
+  - packages
+  - ccache
+sudo: required
+dist: trusty
+latex: false
+addons:
+  apt:
+    sources:
+      - sourceline: 'ppa:ubuntugis/ubuntugis-unstable'
+    packages:
+      - libudunits2-dev
+      - libproj-dev
+      - libgeos-dev
+      - libgdal-dev
 after_success:
   - Rscript -e 'covr::codecov()'
-
-env:
-  global:
-    - _R_CHECK_FORCE_SUGGESTS_=FALSE
 
 # Handle git submodules yourself
 git:
