--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "src/GraphColoring-raw"]
 	path = src/GraphColoring-raw
 	url = git@github.com:saurfang/GraphColoring-cpp.git
-	branch = fix-mcs
+	branch = tabucol-regression
